@@ -1,3 +1,8 @@
+2007-04-12  Richard Sandiford  <richard@codesourcery.com>
+
+	* ld-mips-elf/vxworks1-lib.td: New test.
+	* ld-mips-elf/mips-elf.exp: Run it.
+
 2007-04-05  H.J. Lu  <hongjiu.lu@intel.com>
 
 	PR ld/4304
